# world-cup-qatar-elt-dbt

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy-dbt-app-cloud-run-job.yaml  profiles.yml  pyproject.toml
dbt/: dbt_project.yml
dbt/macros/: build_players_stats.sql
dbt/models/marts/: team_players_stat.sql
dbt/models/staging/: team_players_stat_raw_cleaned.sql
diagram/: dbt_elt_cloud_run_job.excalidraw
file/: world_cup_team_players_stats_domain.json  world_cup_team_players_stats_raw.json  world_cup_team_players_stats_raw_ndjson.json
macros/: build_players_stats.sql
models/marts/: team_players_stat.sql
models/staging/: team_players_stat_raw_cleaned.sql
scripts/: create_and_load_team_stats_raw_table.sh
