[tool.poetry]
name = "world-cup-qatar-elt-dbt"
version = "0.1.0"
description = "A real world use case of ELT with DBT and BigQuery, based on Qatar Fifa World Cup Data"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.2"

[tool.poetry.dev-dependencies]
dbt-core = "1.8.4"
dbt-bigquery = "1.8.2"
pytest = "8.3.1"
